srv/zabbix/Deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zabbix-web
  labels:
    app: zabbix
    tier: frontend
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: zabbix-web
        app: zabbix
    spec:
      containers:
        - name: zabbix-web
          image: monitoringartist/zabbix-xxl:latest
          ports:
          - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zabbix-db
  labels:
    app: zabbix
    tier: zabbix-db
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: zabbix-db
        app: zabbix
        tier: zabbix-db
    spec:
      containers:
        - name: zabbix-db
          image: monitoringartist/zabbix-db-mariadb
          ports:
          - containerPort: 3306
            name: mariadb
          volumeMounts:
          - name: zabbix-db-storage
            mountPath: /var/lib/mysql
      volumes:
      - name: zabbix-db-storage
        persistentVolumeClaim:
          claimName: zabbix-db
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zabbix-server
  labels:
    app: zabbix
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: zabbix-server
        app: zabbix
    spec:
      containers:
        - name: zabbix-server
          image: monitoringartist/zabbix-xxl:latest
          ports:
          - containerPort: 162
            name: snmptrapd
          - containerPort: 10051
            name: zabbix-trapper
          - containerPort: 10052
            name: zabbix-jmx
