srv/zabbix/zabbix.yaml

kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "172.18.0.0/18,172.30.0.0/24,191.36.0.0/17,2804:1454::/32"
  name: zabbix
  namespace: producao
spec:
  tls:
    - hosts:
        - zabbix.sj.ifsc.edu.br
      secretName: tls-ifsc-sje-wildcard
  rules:
    - host: zabbix.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: zabbix
              servicePort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: zabbix
  labels:
    app: zabbix
  namespace: producao
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: zabbix-web-nginx-mysql
    
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: zabbix-mariadb
  name: zabbix-mariadb
  namespace: producao
spec:
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: zabbix-mariadb
    
---

apiVersion: v1
kind: Service
metadata:
  name: zabbix-server-mysql
  labels:
    app: zabbix-server-mysql
  namespace: producao
spec:
  externalIPs:
    - "191.36.8.1"
    - "191.36.8.4"
    - "191.36.8.6"
    - "191.36.8.7"
    - "191.36.8.25"
  ports:
  - port: 10051
    targetPort: 10051
    name: zabbix  
  selector:
    app: zabbix-server-mysql

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zabbix-mariadb
  labels:
    app: zabbix-mariadb
  namespace: producao
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: zabbix-mariadb
    spec:
      containers:
      - name: zabbix-mariadb
        image: mariadb:10.3
        args:          
          - "--character-set-server=utf8mb4"
          - "--collation-server=utf8mb4_unicode_ci"
        ports:
        - name: mysql
          containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: zabbix-mariadb
          subPath: mysql
        resources:
            limits:
                memory: 2Gi
                cpu: 2
            requests:
                memory: 256Mi
                cpu: 300m
      volumes:
        - name: zabbix-mariadb
          persistentVolumeClaim:
            claimName: zabbix-mariadb

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zabbix-server-mysql
  labels:
    app: zabbix-server-mysql
  namespace: producao
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: zabbix-server-mysql
    spec:   
      containers:
      - name: zabbix-server-mysql
        image: zabbix/zabbix-server-mysql:ubuntu-5.0-latest
        imagePullPolicy: Always
        ports:
          - containerPort: 10051
            name: zabbix          
        resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "512Mi"
              cpu: "300m"
        volumeMounts:
          - name: zabbix-mibs
            mountPath: /var/lib/zabbix/mibs 
      volumes:
      - name: zabbix-mibs
        persistentVolumeClaim:
          claimName: zabbix-mibs

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zabbix-web-nginx-mysql
  labels:
    app: zabbix-web-nginx-mysql
  namespace: producao
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: zabbix-web-nginx-mysql
    spec:   
      containers:
      - name: zabbix-web-nginx-mysql
        image: zabbix/zabbix-web-nginx-mysql:ubuntu-5.0-latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /index.php
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 6
        resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "128Mi"
              cpu: "300m"
